add firbase config

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -79,7 +79,7 @@
             height: 5rem;
             width: 100%;
             background-color: $body-bg;
-            padding: 0 2rem;
+            padding: 3rem 2rem;
             box-shadow: $box-shadow;
 
             @include flex(center, space-between);
